// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getUnsavedChangesPromptOptions generates a function that provides appropriate messaging for a single prompt 1`] = `
Object {
  "acceptButtonText": "terraApplication.unsavedChangesPrompt.acceptButtonText",
  "buttonOrder": "rejectFirst",
  "content": undefined,
  "emphasizedAction": "reject",
  "endMessage": "terraApplication.unsavedChangesPrompt.multiplePromptMessageOutro",
  "rejectButtonText": "terraApplication.unsavedChangesPrompt.rejectButtonText",
  "startMessage": "terraApplication.unsavedChangesPrompt.singlePromptMessage",
  "title": "terraApplication.unsavedChangesPrompt.title",
}
`;

exports[`getUnsavedChangesPromptOptions generates a function that provides appropriate messaging for multiple prompts 1`] = `
Object {
  "acceptButtonText": "terraApplication.unsavedChangesPrompt.acceptButtonText",
  "buttonOrder": "rejectFirst",
  "content": <ContentLayoutAsList
    items={
      Array [
        "Test Prompt",
        "Another Test Prompt",
      ]
    }
  />,
  "emphasizedAction": "reject",
  "endMessage": "terraApplication.unsavedChangesPrompt.multiplePromptMessageOutro",
  "rejectButtonText": "terraApplication.unsavedChangesPrompt.rejectButtonText",
  "startMessage": "terraApplication.unsavedChangesPrompt.multiplePromptMessageIntro",
  "title": "terraApplication.unsavedChangesPrompt.title",
}
`;
